Added headers and footers to html and made some improvements to the function that fetches the questions.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body onload="getQuestions()">
-    
+
+<body onload="setQuiz()">
+
+    <header>
+        <h1>Big quiz game for quiz enjoyers who like quizzes with friends!</h1>
+    </header>
+
+    <p id="questions"></p>
+
+    <footer>
+        <p>Questions from Open Trivia Database</p>
+    </footer>
     <script src="getQuestions.js"></script>
 </body>
+
 </html>
