--- a/index.html
+++ b/index.html
@@ -5,20 +5,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 
-<body onload="setQuiz()">
+<body>
 
     <header>
         <h1>Big quiz game for quiz enjoyers who like quizzes with friends!</h1>
     </header>
 
-    <p id="questions"></p>
+<div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+                <div class="card">
+                    <div class="card-body">
+                        <h4 class="card-title text-center">Add Players (up to 4)</h4>
+                        <form id="playerForm">
+                            <div class="form-group">
+                                <label for="playerName">Player Name</label>
+                                <input type="text" class="form-control" id="playerName" placeholder="Enter player name">
+                            </div>
+                            <div class="text-center">
+                                <button type="button" class="btn btn-sm btn-danger" onclick="addPlayer()">Add Player</button>
+                            </div>
+                        </form>
+                        <div id="playerList"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <footer>
         <p>Questions from Open Trivia Database</p>
     </footer>
     <script src="getQuestions.js"></script>
+    <script src="addPlayers.js"></script>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
