added question to be displayed. still need buttons and leaderboard.

--- a/quiz.html
+++ b/quiz.html
@@ -22,7 +22,10 @@
                 <div class="card">
                     <div class="card-body">
                         <h4 class="card-title text-center">The quiz to play with friends</h4>
-                        <div id="questionBody"></div>
+                        <div id="questionBody">
+                            <h5 id="question">question here</h5>
+                            <div id="answers"></div>
+                        </div>
                     </div>
                 </div>
             </div>
