added way to finish game and score board

--- a/quiz.html
+++ b/quiz.html
@@ -25,6 +25,14 @@
                         <div id="questionBody">
                             <h5 id="question">question here</h5>
                             <div id="answers"></div>
+                            <div id="leaderboard">
+                                <table id="scoreboard">
+                                    <tr>
+                                        <th>Player</th>
+                                        <th>Score</th>
+                                    </tr>
+                                </table>
+                            </div>
                         </div>
                     </div>
                 </div>
