leaderboard displays correctly and added some text to say which players turn it is.

--- a/quiz.html
+++ b/quiz.html
@@ -21,7 +21,7 @@
             <div class="col-md-6">
                 <div class="card">
                     <div class="card-body">
-                        <h4 class="card-title text-center">The quiz to play with friends</h4>
+                        <h4 class="card-title text-center" id="quizHeader">The quiz to play with friends</h4>
                         <div id="questionBody">
                             <h5 id="question">question here</h5>
                             <div id="answers"></div>
